--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <!-- bootstrap cdn links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- fontawsome cdn links  -->
+    <script src="https://kit.fontawesome.com/b64eb6d7b7.js" crossorigin="anonymous"></script>
+    <!-- custome styles -->
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img class="img-fluid" src="images/logo.png" alt="" 
-                    class="d-inline-block align-text-top">
+                    <img class="img-fluid" src="images/logo.png" alt="" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -30,23 +33,246 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoe">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#subscribe">Subscribe</a>
                         </li>
-                       
+
                     </ul>
-                   
+
                 </div>
             </div>
         </nav>
+        <!-- image slider /carousel -->
+        <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row p-5 panda-bg-info ng-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h1>$420</h1>
+                                <button class="panda-btn-buy-now">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row p-5 panda-bg-info ng-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports</h1>
+                                <p>This is the best tv in the world for people who just want to waste time in
+                                    front of tv.</p>
+                                <h1>$1200</h1>
+                                <button class="panda-btn-buy-now">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row p-5 panda-bg-info ng-gradient d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>X-Box for your living room</h1>
+                                <p>This is the best x-box in the world for people who just want to waste time in
+                                    front of fake sports.</p>
+                                <h1>$600</h1>
+                                <button class="panda-btn-buy-now">Buy Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </header>
 
+    <!-- main part start -->
+    <main>
 
+        <!-- categories -->
+        <section class="container my-5 categories">
+            <div class="row g-4">
+                <h1>Categories</h1>
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="panda-categories-btn-1 p-3 border bg-warning d-flex align-items-center justify-content-between">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="panda-categories-btn-2 p-3 border bg-success d-flex align-items-center justify-content-between">
+                        <h1 class="text-white">Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 col-md-6">
+                    <div class="panda-categories-btn-3 p-3 border bg-primary d-flex align-items-center justify-content-between">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- shoes sections -->
+        <section class="container my-5" id="shoe">
+            <h1>Shoes</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
+                <div class="col">
+                    <div class="panda-card border-0 shadow-lg h-100 pb-3">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. </p>
+                            <h1>$1289</h1>
+                        </div>
+                        <div>
+
+                            <button type="button"
+                                class="btn btn-dark d-grid gap-2 col-6 mx-auto d-flex justify-content-center align-items-center">BUY NOW
+                                <i class="fas fa-arrow-right text-white"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="panda-card border-0 shadow-lg h-100 pb-3">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Reebok Pump</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. </p>
+                            <h1>$799</h1>
+                        </div>
+                        <div>
+
+                            <button type="button"
+                            class="btn btn-dark d-grid gap-2 col-6 mx-auto d-flex justify-content-center align-items-center">BUY NOW
+                            <i class="fas fa-arrow-right text-white"></i>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="panda-card border-0 shadow-lg h-100 pb-3">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Reebok All Terrain</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint.</p>
+                            <h1>$699</h1>
+                        </div>
+                        <div>
+                            <button type="button"
+                            class="btn btn-dark d-grid gap-2 col-6 mx-auto d-flex justify-content-center align-items-center">BUY NOW
+                            <i class="fas fa-arrow-right text-white"></i>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Backpack sections -->
+        <section class="container" id="backpack">
+            <h1>Backpack</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-3">
+                <div class="col">
+                    <div class="panda-card border-0 shadow-lg h-100 pb-3">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ison Backpack</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. </p>
+                            <h1>$1289</h1>
+                        </div>
+                        <div>
+                            <button type="button"
+                            class="btn btn-dark d-grid gap-2 col-6 mx-auto d-flex justify-content-center align-items-center">BUY NOW
+                            <i class="fas fa-arrow-right text-white"></i>
+
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="panda-card border-0 shadow-lg h-100 pb-3">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Biaowang Backpack</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint. </p>
+                            <h1>$799</h1>
+                        </div>
+                        <div>
+
+                            <button type="button"
+                            class="btn btn-dark d-grid gap-2 col-6 mx-auto d-flex justify-content-center align-items-center">BUY NOW
+                            <i class="fas fa-arrow-right text-white"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="panda-card border-0 shadow-lg h-100 pb-3">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Dxyizu WS54 Smart</h5>
+                            <p class="card-text">Amet minim mollit non deserunt ullamco
+                                est sit aliqua dolor do amet sint.</p>
+                            <h1>$699</h1>
+                        </div>
+                        <div>
+                            <button type="button"
+                            class="btn btn-dark d-grid gap-2 col-6 mx-auto d-flex justify-content-center align-items-center">BUY NOW
+                            <i class="fas fa-arrow-right text-white"></i>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- subscribe sections
+         -->
+        <section style="height:300px;" class="container panda-bg-info d-flex justify-content-center align-items-center rounded-3 my-5" id="subscribe">
+            <div>
+                <h1>LET"S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input class="form-control" type="text" placeholder="Enter Your Email">
+                <br>
+                <button class="panda-btn-buy-now">SUBMIT</button>
+            </div>
+        </section>
+    </main>
+    <!-- footer sections -->
+    <footer class="mt-5 text-center">
+      <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria</small></p>
+    </footer>
 
     <!-- bootstrap script cdn links -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
