--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </nav>
         <!-- image slider /carousel -->
-        <section class="container">
+        <section class="container my-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -271,7 +271,7 @@
     </main>
     <!-- footer sections -->
     <footer class="mt-5 text-center">
-      <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria</small></p>
+      <p><small>©2025. Panda Commerce. All rights reserved. Sofia, Bulgaria</small></p>
     </footer>
 
     <!-- bootstrap script cdn links -->
