--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- image slider /carousel -->
         <section class="container my-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner panda-carousel">
                     <div class="carousel-item active">
                         <div class="row p-5 panda-bg-info ng-gradient d-flex align-items-center">
                             <div class="col-lg-7">
